<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<ImageView-->
    <!--android:id="@+id/loginPageBG"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:alpha="0.5"-->
    <!--android:scaleType="fitXY"-->
    <!--android:src="@drawable/login_background" />-->

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_above="@+id/status_description"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/hunter_min" />
    <TextView
        android:id="@+id/status_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_pending_status_description"
        android:layout_above="@+id/status_container"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textColor="@color/Gray"
        android:textSize="18sp"
        android:textStyle="italic"
        android:visibility="visible"
        />
    <RelativeLayout
        android:id="@+id/status_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <!--android:background="@drawable/round_corner_rectangle"

        >-->
        <TextView
            android:id="@+id/txt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/your_application_status"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:layout_centerHorizontal="true"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/status_informer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_status"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="40dp"
            android:paddingTop="8dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="8dp"
            android:layout_gravity="center"
            android:text="@string/progress"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="32sp"
            android:background="@drawable/round_corner_light_color"
            android:elevation="4dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/status_informer"
            android:layout_centerHorizontal="true"
            android:text="@string/refresh"
            android:id="@+id/refresh"
            android:background="@color/CornflowerBlue"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/openDashboard"
        android:elevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_container"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/round_corner"
        android:paddingTop="12dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="12dp"
        android:layout_gravity="center"
        android:text="@string/proceed"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/poweredByMNT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/powered_by_mnt_soft"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

</RelativeLayout>