<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0e0e0"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/loginPageBG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="fitXY"
        android:src="@drawable/login_background" />


    <LinearLayout
        android:id="@+id/llgrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:background="@android:color/transparent"
        android:elevation="8dp"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:visibility="gone"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:weightSum="1">

            <com.mntsoft.hunterjeans.views.RippleView
                android:id="@+id/rect"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                ripple:rv_type="rectangle"
                ripple:rv_zoom="true">

                <LinearLayout
                    android:id="@+id/lladmin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="#388e3c"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fontadmin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/home"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textColor="@color/rippelColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Denim Hub"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                        android:textColor="@color/rippelColor" />


                </LinearLayout>
            </com.mntsoft.hunterjeans.views.RippleView>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <com.mntsoft.hunterjeans.views.RippleView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    ripple:rv_type="rectangle"
                    ripple:rv_zoom="true">

                    <LinearLayout
                        android:id="@+id/llpersonalinfo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="#c62828"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/fontpersonal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/myprofile"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                            android:textColor="@color/rippelColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="Denim Hub"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                            android:textColor="@color/rippelColor" />

                    </LinearLayout>
                </com.mntsoft.hunterjeans.views.RippleView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp" />

                <com.mntsoft.hunterjeans.views.RippleView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    ripple:rv_type="rectangle"
                    ripple:rv_zoom="true">

                    <LinearLayout
                        android:id="@+id/llattendance"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="#0277bd"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/fontattendance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/attendance"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                            android:textColor="@color/rippelColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="Denim Hub"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                            android:textColor="@color/rippelColor" />

                    </LinearLayout>
                </com.mntsoft.hunterjeans.views.RippleView>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <com.mntsoft.hunterjeans.views.RippleView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            ripple:rv_type="rectangle"
            ripple:rv_zoom="true">

            <LinearLayout
                android:id="@+id/llapplications"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#f9a825"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fontapplication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/applications"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:textColor="@color/rippelColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Denim Hub"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="@color/rippelColor" />

            </LinearLayout>
        </com.mntsoft.hunterjeans.views.RippleView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <com.mntsoft.hunterjeans.views.RippleView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                ripple:rv_type="rectangle"
                ripple:rv_zoom="true">

                <LinearLayout
                    android:id="@+id/lldocuments"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="#f4511e"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fontdocuments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/documents"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textColor="@color/rippelColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Denim Hub"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                        android:textColor="@color/rippelColor" />

                </LinearLayout>
            </com.mntsoft.hunterjeans.views.RippleView>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent" />

            <com.mntsoft.hunterjeans.views.RippleView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                ripple:rv_type="rectangle"
                ripple:rv_zoom="true">

                <LinearLayout
                    android:id="@+id/llmessage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="#827717"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fontmessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/help"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textColor="@color/rippelColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Denim Hub"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                        android:textColor="@color/rippelColor" />

                </LinearLayout>
            </com.mntsoft.hunterjeans.views.RippleView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:background="#fff"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.2"
            android:text="Quotation :"
            android:textColor="#600"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_quote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/quot"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />
    </LinearLayout>

    <GridView
        android:id="@+id/gridView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:horizontalSpacing="24dp"
        android:numColumns="2"
        android:padding="24dp"
        android:verticalSpacing="24dp" />


</RelativeLayout>